--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Stepper</string>
     <string name="title_activity_maps">Map</string>
 
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA-3ZovPmahTmrLiuUvSs-5wApDxZGMFeo</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
 
     <string name="pickup_point">Pickup Point</string>
     <string name="apartment">Apartment</string>
